--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-    <p id="p1">Depuis HTML - Dataset représentant un nombre</p>
-    <p id="p2">Depuis HTML - Dataset représentant une chaîne de caractères</p>
-    <p id="p3">Depuis HTML - Dataset représentant une liste ( un tableau de valeurs par exemple )</p>
-    <p id="p4">Depuis HTML - Dataset représentant un booléen</p>
+    <p id="p1" data-age="32">Depuis HTML - Dataset représentant un nombre</p>
+    <p id="p2" data-ville="Hirson">Depuis HTML - Dataset représentant une chaîne de caractères</p>
+    <p id="p3" data-hobbies="trekking|fishing|running">Depuis HTML - Dataset représentant une liste ( un tableau de valeurs par exemple )</p>
+    <p id="p4" data-booleen="false">Depuis HTML - Dataset représentant un booléen</p>
 
     <p id="p5"></p>
     <p id="p6"></p>
